Bug 1546603 - Don't finalize stream sources from JS if creating the stream object failed, r=arai.

Differential Revision: https://phabricator.services.mozilla.com/D28931